parser/src/snapshots/json_parser__parser__tests__parse_test_data@pass__pass04.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/pass/pass04.json
---
Ok(
    Array(
        [
            Number(
                3.141592653589793,
            ),
            Number(
                3e-117,
            ),
        ],
    ),
)
