parser/src/snapshots/json_parser__parser__tests__parse_test_data@pass__pass14.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/pass/pass14.json
---
Ok(
    Object(
        [
            JsonProperty {
                key: "string with backandquote \\\\\\\"",
                value: Number(
                    1.0,
                ),
            },
            JsonProperty {
                key: "string with back\\\\",
                value: Number(
                    2.0,
                ),
            },
        ],
    ),
)
